# zkteco_sync

./: .env.example  README.md  install.py  pyproject.toml  run.py
app/: database.py  deps.py  main.py  models.py  schemas.py
app/routers/: adms.py  attendance.py  auth.py  devices.py  employees.py  hrm_sync.py
app/services/: hrm_sync.py  poller.py  sdk.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: CommandsDrawer.jsx  DeviceFormModal.jsx  DeviceInfoDrawer.jsx  DeviceUsersDrawer.jsx  Drawer.jsx  KebabMenu.jsx  Layout.jsx  PasswordConfirmModal.jsx  SetClockDrawer.jsx  WriteLcdDrawer.jsx
frontend/src/pages/: Attendance.jsx  Devices.jsx  Employees.jsx  Login.jsx  Settings.jsx
